--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+  <header>
+    
+  </header>
+  <section></section>
+  <footer></footer>
 </body>
 </html>
