Skapade subject.html samt subjectpage-style.css
Har gjort en grov grund av html och css ingen footer finns på någon av
sidorna ännu

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <div id="logo"><a href="index.html">STUDHELP</a></div>
             
             <ul>
-                <li><a href=#Objekt>Ämne</a></li>
-                <li><a href=#Objekt>Ämne</a></li>
-                <li><a href=#Objekt>Ämne</a></li>
-                <li><a href=#Objekt>Ämne</a></li>
-                <li><a href=#Objekt>Ämne</a></li>
-                <li><a href=#Objekt>Ämne</a></li>
+                <li><a href=#Objekt>Ämne 1</a></li>
+                <li><a href=#Objekt>Ämne 2</a></li>
+                <li><a href=#Objekt>Ämne 3</a></li>
+                <li><a href=#Objekt>Ämne 4</a></li>
+                <li><a href=#Objekt>Ämne 5</a></li>
+                <li><a href=#Objekt>Ämne 6</a></li>
                 <li><a href=#Objekt>Bli medlem</a></li>
                 <li><a href=#Objekt>Login</a></li>
             </ul>  
